<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        tools:context="com.kjsce.camplus.Login.LoginActivity">

    <RelativeLayout
            android:id="@+id/relativeLayout_login"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:id="@+id/disp_camplus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="60sp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/disp_socialnetwork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/disp_camplus"
                android:text="@string/social_network_for_kjsce"
                android:textAlignment="center"
                android:textColor="@color/material_blue_grey_500"
                android:textSize="22sp"/>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/username_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/disp_socialnetwork"
                android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/password_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username_wrapper"
                android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/forgot_password_btn"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/password_wrapper"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:textSize="18sp"/>

        <Button
                android:id="@+id/login_btn"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgot_password_btn"
                android:text="@string/login"
                android:textSize="30sp"
                android:textStyle="bold"/>

        <Button
                android:id="@+id/no_account_yet_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_btn"
                android:layout_centerHorizontal="true"
                android:text="@string/no_account_yet_create_one"
                android:textAllCaps="false"
                android:textSize="20sp"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
