<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:focusable="true"
                                             android:focusableInTouchMode="true"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:padding="12dp"
                                             tools:context="com.kjsce.camplus.ForgotPassword.ForgotPasswordActivity"
                                             tools:layout_editor_absoluteY="25dp">

    <TextView
            android:id="@+id/disp_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="@color/material_blue_grey_400"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/relativeLayout_forgot"/>

    <RelativeLayout
            android:id="@+id/relativeLayout_forgot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:id="@+id/disp_forgot_password_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/otp_will_be_sent_to_your_somaiya_email_id"
                android:textSize="18sp"
                android:textAlignment="center"/>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/forgot_email_wrapper"
                android:layout_below="@+id/disp_forgot_password_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/forgot_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/somaiya_email_id"/>
        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/send_otp_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgot_email_wrapper"
                android:layout_centerHorizontal="true"
                android:text="@string/send_otp"/>

        <LinearLayout
                android:id="@+id/fragment_otp_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/send_otp_btn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
