<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/createPost_relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
>

    <include layout="@layout/layout_top_line"/>

    <FrameLayout
            android:id="@+id/createPost_frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="45dp">

    </FrameLayout>

    <ScrollView
            android:id="@+id/createPost_scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp">

        <RelativeLayout
                android:id="@+id/createPost_relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp">

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/createPost_title_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/createPost_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/createPost_content_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/createPost_title_wrapper">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/createPost_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/content"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/createPost_tags_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/createPost_content_wrapper">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/createPost_tags"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:longClickable="false"
                        android:hint="@string/tags"/>

            </android.support.design.widget.TextInputLayout>

            <ImageButton
                    android:id="@+id/createPost_addImage_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/createPost_tags_wrapper"
                    android:background="@color/white"
                    android:src="@drawable/ic_image"/>

            <ImageButton
                    android:id="@+id/createPost_addTags_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/createPost_tags_wrapper"
                    android:layout_toEndOf="@+id/createPost_addImage_btn"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:background="@color/white"
                    android:src="@drawable/ic_tags"/>

            <ImageView
                    android:id="@+id/createPost_image"
                    android:layout_width="fill_parent"
                    android:layout_height="350dp"
                    android:layout_below="@+id/createPost_addImage_btn"
                    android:layout_alignParentStart="true"/>


        </RelativeLayout>

    </ScrollView>

    <Button
            android:id="@+id/createPost_post_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@android:color/holo_red_dark"
            android:text="@string/post"
            android:textColor="#FFFFFF"
            android:textSize="22sp"/>

</RelativeLayout>
